--- a/src/page/index/index.less
+++ b/src/page/index/index.less
@@ -1,133 +1,214 @@
-.index-wrapper{
-  width:100%;
-  height:100vh;
-  background-image: url(../../static/home/_bg.jpg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-origin: border-box;
-  background-size:100% 100%;
-  transition: height .6s linear;
-  user-select: none;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.index-wrapper {
+  width : 100%;
+  height : 100vh;
+  background-image : url(../../static/home/_bg.jpg);
+  background-repeat : no-repeat;
+  background-attachment : fixed;
+  background-position : center;
+  -o-background-origin : border-box;
+  background-origin : border-box;
+  -o-background-size : 100% 100%;
+  background-size : 100% 100%;
+  -webkit-transition : height .6s linear;
+  -o-transition : height .6s linear;
+  -moz-transition : height .6s linear;
+  transition : height .6s linear;
+  -webkit-user-select : none;
+  -moz-user-select : none;
+  -ms-user-select : none;
+  user-select : none;
+  font-family : 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
-  &::before{
-    top:0;
-    left:0;
-    z-index: 0;
-    content: '';
-    width:100%;
-    height: 100%;
-    display: block;
-    position: fixed;
-    background-color: rgba(0,0,0,.3);
-    background-position: center;
-    background-attachment: fixed;
-    background-origin: border-box;
-    background-size: 100% 100%;
+  &::before {
+    top : 0;
+    left : 0;
+    z-index : 0;
+    content : '';
+    width : 100%;
+    height : 100%;
+    display : block;
+    position : fixed;
+    background-color : rgba(0,0,0,.3);
+    background-position : center;
+    background-attachment : fixed;
+    -o-background-origin : border-box;
+    background-origin : border-box;
+    -o-background-size : 100% 100%;
+    background-size : 100% 100%;
   }
 }
 
-.index-wrapper{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.index-wrapper {
+  display : -webkit-flex;
+  display : -moz-box;
+  display : -ms-flexbox;
+  display : flex;
+  -webkit-justify-content : center;
+  -moz-box-pack : center;
+  -ms-flex-pack : center;
+  justify-content : center;
+  -webkit-align-items : center;
+  -moz-box-align : center;
+  -ms-flex-align : center;
+  align-items : center;
 
-  .main{
-    z-index: 1;
-    width: 500px;
-    height: 100%;
+  .main {
+    z-index : 1;
+    width : 500px;
+    height : 100%;
   }
 }
 
 .index-wrapper > .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items:center;
-  animation: open-index 1s ease-in-out;
+  display : -webkit-flex;
+  display : -moz-box;
+  display : -ms-flexbox;
+  display : flex;
+  -webkit-flex-direction : column;
+  -moz-box-orient : vertical;
+  -moz-box-direction : normal;
+  -ms-flex-direction : column;
+  flex-direction : column;
+  -webkit-justify-content : flex-start;
+  -moz-box-pack : start;
+  -ms-flex-pack : start;
+  justify-content : flex-start;
+  -webkit-align-items : center;
+  -moz-box-align : center;
+  -ms-flex-align : center;
+  align-items : center;
+  -webkit-animation : open-index 1s ease-in-out;
+  -moz-animation : open-index 1s ease-in-out;
+  -o-animation : open-index 1s ease-in-out;
+  animation : open-index 1s ease-in-out;
 
-  h1{
-    font-size: 2.3rem;
-    font-weight:bold;
-    letter-spacing: 2px;
-    color:#fff;
-    margin: 50px 0 50px;
-    cursor: pointer;
+  h1 {
+    font-size : 2.3rem;
+    font-weight : bold;
+    letter-spacing : 2px;
+    color : #FFFFFF;
+    margin : 50px 0 50px;
+    cursor : pointer;
   }
 
-  h2{
-    font-size:1.8rem;
-    font-weight: bold;
-    color:#eee;
-    margin:0 0 30px;
-    letter-spacing: 1px;
-    cursor: pointer;
+  h2 {
+    font-size : 1.6rem;
+    font-weight : bold;
+    color : #EEEEEE;
+    margin : 0 0 30px;
+    letter-spacing : 1px;
+    cursor : pointer;
   }
 
-  h3{
-    font-size:2.5rem;
-    font-weight: bold;
-    color:#fff;
-    margin:50px 0 50px;
-    letter-spacing: 3px;
-    word-spacing: 7px;
-    cursor: pointer;
+  h3 {
+    font-size : 2.4rem;
+    font-weight : bold;
+    color : #FFFFFF;
+    margin : 50px 0 50px;
+    letter-spacing : 3px;
+    word-spacing : 7px;
+    cursor : pointer;
   }
-  
-  .tag{
-    margin:20px 0 10px;
-    text-align: center;
-    
-    div{
-      margin:3px 0;
-      color:#ccc;
-      font-size:13px;
-      letter-spacing: 1px;
-      cursor: pointer;
-      line-height: 17px;
-      vertical-align: middle;
-      text-transform: capitalize;
+
+  .tag {
+    margin : 20px 0 10px;
+    text-align : center;
+
+    div {
+      margin : 3px 0;
+      color : #CCCCCC;
+      font-size : 13px;
+      letter-spacing : 1px;
+      cursor : pointer;
+      line-height : 17px;
+      vertical-align : middle;
+      text-transform : capitalize;
     }
   }
 
-  .goto{
-    border:0;
-    width:270px;
-    height:55px;
-    padding:0 15px;
-    font-size:30px;
-    word-break: break-all;
-    vertical-align: middle;
-    color:#ccc;
-    cursor: pointer;
-    border-radius:9px;
-    background-color: rgba(0,0,0,0);
-    transition: all .3s linear;
+  .goto {
+    border : 0;
+    width : 270px;
+    height : 55px;
+    padding : 0 15px;
+    font-size : 30px;
+    word-break : break-all;
+    vertical-align : middle;
+    color : #CCCCCC;
+    cursor : pointer;
+    border-radius : 9px;
+    background-color : rgba(0,0,0,0);
+    -webkit-transition : all .3s linear;
+    -o-transition : all .3s linear;
+    -moz-transition : all .3s linear;
+    transition : all .3s linear;
 
-    span{
-      color:inherit;
-      letter-spacing: -5px;
+    span {
+      color : inherit;
+      letter-spacing : -5px;
     }
 
-    &:hover{
-      transform: scale(1.03);
-      color:#fff;
+    &:hover {
+      -webkit-transform : scale(1.03);
+      -moz-transform : scale(1.03);
+      -ms-transform : scale(1.03);
+      -o-transform : scale(1.03);
+      transform : scale(1.03);
+      color : #FFFFFF;
     }
   }
 }
 
-@keyframes open-index{
-  from{
-    transform: scale(.3);
+@-webkit-keyframes open-index {
+  from {
+    -webkit-transform : scale(.3);
+    transform : scale(.3);
   }
-  to{
-    transform: scale(1);
+  to {
+    -webkit-transform : scale(1);
+    transform : scale(1);
   }
 }
 
-@media screen and (max-width:500px){
-  html{
-    font-size:11.3px;
+@-moz-keyframes open-index {
+  from {
+    -moz-transform : scale(.3);
+    transform : scale(.3);
+  }
+  to {
+    -moz-transform : scale(1);
+    transform : scale(1);
+  }
+}
+
+@-o-keyframes open-index {
+  from {
+    -o-transform : scale(.3);
+    transform : scale(.3);
+  }
+  to {
+    -o-transform : scale(1);
+    transform : scale(1);
+  }
+}
+
+@keyframes open-index {
+  from {
+    -webkit-transform : scale(.3);
+    -moz-transform : scale(.3);
+    -o-transform : scale(.3);
+    transform : scale(.3);
+  }
+  to {
+    -webkit-transform : scale(1);
+    -moz-transform : scale(1);
+    -o-transform : scale(1);
+    transform : scale(1);
+  }
+}
+
+@media screen and (max-width:500px) {
+  html {
+    font-size : 11.3px;
   }
 }
